--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
     color: white;
     left: 10px;
     top: 10px;
-    margin: 0;
+    margin: 0 auto;
     font-family: sans-serif;
     font-size: 1rem;
 }
